--- a/views/products.ejs
+++ b/views/products.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="/products.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/products.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,5 +29,8 @@
             <% } %>
         </div>
     </div>
+
+    <script src="socket.io/socket.io.js"></script>
+    <script src="/js/socket.js"></script>
 </body>
 </html>
