--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,8 @@
         </div>
 
         <button type="submit">crear</button>
+
+        <a style="margin-top: 1rem;" href="/chat">Go to chat</a>
     </form>
 
     <script src="socket.io/socket.io.js"></script>
