--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,7 +11,7 @@
 
 body{
     background-color: #f9f9ff;
-    height: 100vh;
+    min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
